--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "copy-webpack-plugin": "^8.1.0",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "html-minimizer-webpack-plugin": "^2.1.0",
+    "image-minimizer-webpack-plugin": "^3.8.3",
+    "imagemin": "^8.0.1",
+    "imagemin-optipng": "^8.0.0",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0"
   }
