--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^8.1.0",
     "css-minimizer-webpack-plugin": "^5.0.1",
+    "eslint": "^8.54.0",
     "html-minimizer-webpack-plugin": "^2.1.0",
     "image-minimizer-webpack-plugin": "^3.8.3",
     "imagemin": "^8.0.1",
